ajout patientplanning
