# src/main/java/be/projetSGBD/api/PatientPlanningApi.java
@@ -1,0 +1,98 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (4.3.1).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package be.projetSGBD.api;
+
+import java.math.BigDecimal;
+import be.projetSGBD.model.PatientPlanning;
+import io.swagger.annotations.*;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.CookieValue;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+
+@Validated
+@Api(value = "PatientPlanning", description = "the PatientPlanning API")
+public interface PatientPlanningApi {
+
+    default Optional<NativeWebRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    /**
+     * POST /api/v1/addPatientPlanning : Create the PatientPlanning
+     * Create the PatientPlanning
+     *
+     * @param patientPlanning user object (optional)
+     * @return created (status code 201)
+     */
+    @ApiOperation(value = "Create the PatientPlanning", nickname = "createPatientPlanning", notes = "Create the PatientPlanning", tags={ "PatientPlanning", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 201, message = "created") })
+    @RequestMapping(value = "/api/v1/addPatientPlanning",
+        consumes = { "application/xml", "application/json" },
+        method = RequestMethod.POST)
+    default ResponseEntity<PatientPlanning> createPatientPlanning(@ApiParam(value = "user object"  )  @Valid @RequestBody(required = false) PatientPlanning patientPlanning) {
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+
+    /**
+     * DELETE /api/v1/patientPlanning/{idPatientPlanning} : Delete the PatientPlanning
+     * Deletes the PatientPlanning
+     *
+     * @param idPatientPlanning PatientPlanning id (required)
+     * @return successful operation (status code 204)
+     *         or Given user ID doesn&#39;t exist (status code 404)
+     */
+    @ApiOperation(value = "Delete the PatientPlanning", nickname = "deletePatientPlanning", notes = "Deletes the PatientPlanning", tags={ "PatientPlanning", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 204, message = "successful operation"),
+        @ApiResponse(code = 404, message = "Given user ID doesn't exist") })
+    @RequestMapping(value = "/api/v1/patientPlanning/{idPatientPlanning}",
+        method = RequestMethod.DELETE)
+    default ResponseEntity<Void> deletePatientPlanning(@ApiParam(value = "PatientPlanning id",required=true) @PathVariable("idPatientPlanning") Long idPatientPlanning) {
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+
+    /**
+     * GET /api/v1/patientPlanning/{idPatientPlanning} : Returns the PatientPlanning
+     * Returns the PatientPlanning
+     *
+     * @param idPatientPlanning IdPatientPlanning Identifier (required)
+     * @return successful operation (status code 200)
+     *         or Given user ID doesn&#39;t exist (status code 404)
+     */
+    @ApiOperation(value = "Returns the PatientPlanning", nickname = "getPatientPlanningByIdPatientPlanning", notes = "Returns the PatientPlanning", tags={ "PatientPlanning", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "successful operation"),
+        @ApiResponse(code = 404, message = "Given user ID doesn't exist") })
+    @RequestMapping(value = "/api/v1/patientPlanning/{idPatientPlanning}",
+        method = RequestMethod.GET)
+    default ResponseEntity<PatientPlanning> getPatientPlanningByIdPatientPlanning(@ApiParam(value = "IdPatientPlanning Identifier",required=true) @PathVariable("idPatientPlanning") Long idPatientPlanning) {
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+}
